templates/EksClusterProduct.template.json
{
  "Metadata": {
    "AWS::CloudFormation::Interface": {
      "ParameterGroups": [
        {
          "Label": {
            "default": "Cluster Configuration"
          },
          "Parameters": [
            "EksClusterName",
            "EksClusterDefaultCapacity"
          ]
        }
      ],
      "ParameterLabels": {
        "EksClusterName": {
          "default": "Name of the EKS cluster you are creating"
        },
        "EksClusterDefaultCapacity": {
          "default": "Number of default worker instances"
        }
      }
    }
  },
  "Parameters": {
    "EksClusterName": {
      "Type": "String"
    },
    "EksClusterDefaultCapacity": {
      "Type": "Number",
      "Default": 2,
      "Description": "How many instances do you need as default NodeGroup? 2 instances will be added if you leave this blank"
    },
    "AssetParameters1d4bc9c94ad495269c8403552eb916f466fcc202a35957cfb7cf6a0fe0739d42S3Bucket9EBF7C44": {
      "Type": "String",
      "Description": "S3 bucket for asset \"1d4bc9c94ad495269c8403552eb916f466fcc202a35957cfb7cf6a0fe0739d42\""
    },
    "AssetParameters1d4bc9c94ad495269c8403552eb916f466fcc202a35957cfb7cf6a0fe0739d42S3VersionKey752BCCC4": {
      "Type": "String",
      "Description": "S3 key for asset version \"1d4bc9c94ad495269c8403552eb916f466fcc202a35957cfb7cf6a0fe0739d42\""
    },
    "AssetParameters1d4bc9c94ad495269c8403552eb916f466fcc202a35957cfb7cf6a0fe0739d42ArtifactHashDDB9E62D": {
      "Type": "String",
      "Description": "Artifact hash for asset \"1d4bc9c94ad495269c8403552eb916f466fcc202a35957cfb7cf6a0fe0739d42\""
    },
    "AssetParameters7b8f901e53744758131669f2606b340cd2b32759fbbfc3dd93fb3fa4d08d690aS3Bucket24A39C33": {
      "Type": "String",
      "Description": "S3 bucket for asset \"7b8f901e53744758131669f2606b340cd2b32759fbbfc3dd93fb3fa4d08d690a\""
    },
    "AssetParameters7b8f901e53744758131669f2606b340cd2b32759fbbfc3dd93fb3fa4d08d690aS3VersionKey0E38F1A8": {
      "Type": "String",
      "Description": "S3 key for asset version \"7b8f901e53744758131669f2606b340cd2b32759fbbfc3dd93fb3fa4d08d690a\""
    },
    "AssetParameters7b8f901e53744758131669f2606b340cd2b32759fbbfc3dd93fb3fa4d08d690aArtifactHash84962CBE": {
      "Type": "String",
      "Description": "Artifact hash for asset \"7b8f901e53744758131669f2606b340cd2b32759fbbfc3dd93fb3fa4d08d690a\""
    },
    "AssetParametersb7d8a9750f8bfded8ac76be100e3bee1c3d4824df006766110d023f42952f5c2S3Bucket9ABBD5A2": {
      "Type": "String",
      "Description": "S3 bucket for asset \"b7d8a9750f8bfded8ac76be100e3bee1c3d4824df006766110d023f42952f5c2\""
    },
    "AssetParametersb7d8a9750f8bfded8ac76be100e3bee1c3d4824df006766110d023f42952f5c2S3VersionKey40FF2C4A": {
      "Type": "String",
      "Description": "S3 key for asset version \"b7d8a9750f8bfded8ac76be100e3bee1c3d4824df006766110d023f42952f5c2\""
    },
    "AssetParametersb7d8a9750f8bfded8ac76be100e3bee1c3d4824df006766110d023f42952f5c2ArtifactHashE86B38C7": {
      "Type": "String",
      "Description": "Artifact hash for asset \"b7d8a9750f8bfded8ac76be100e3bee1c3d4824df006766110d023f42952f5c2\""
    },
    "AssetParametersf238259866621bc7bff26bcb8d342d73cc9fee54f7a299e97802777fbdbba45dS3BucketFE42C6EB": {
      "Type": "String",
      "Description": "S3 bucket for asset \"f238259866621bc7bff26bcb8d342d73cc9fee54f7a299e97802777fbdbba45d\""
    },
    "AssetParametersf238259866621bc7bff26bcb8d342d73cc9fee54f7a299e97802777fbdbba45dS3VersionKeyF23EA391": {
      "Type": "String",
      "Description": "S3 key for asset version \"f238259866621bc7bff26bcb8d342d73cc9fee54f7a299e97802777fbdbba45d\""
    },
    "AssetParametersf238259866621bc7bff26bcb8d342d73cc9fee54f7a299e97802777fbdbba45dArtifactHash0ED9FBF3": {
      "Type": "String",
      "Description": "Artifact hash for asset \"f238259866621bc7bff26bcb8d342d73cc9fee54f7a299e97802777fbdbba45d\""
    },
    "AssetParameters11c96f59158a1674f78117dbd7b942085a4018d778a6598f6c11da4478c35edbS3BucketCC4031B9": {
      "Type": "String",
      "Description": "S3 bucket for asset \"11c96f59158a1674f78117dbd7b942085a4018d778a6598f6c11da4478c35edb\""
    },
    "AssetParameters11c96f59158a1674f78117dbd7b942085a4018d778a6598f6c11da4478c35edbS3VersionKey607E4B05": {
      "Type": "String",
      "Description": "S3 key for asset version \"11c96f59158a1674f78117dbd7b942085a4018d778a6598f6c11da4478c35edb\""
    },
    "AssetParameters11c96f59158a1674f78117dbd7b942085a4018d778a6598f6c11da4478c35edbArtifactHash5F4A9912": {
      "Type": "String",
      "Description": "Artifact hash for asset \"11c96f59158a1674f78117dbd7b942085a4018d778a6598f6c11da4478c35edb\""
    }
  },
  "Resources": {
    "AdminRole38563C57": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":iam::865200059792:root"
                    ]
                  ]
                }
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/AdminRole/Resource"
      }
    },
    "sceksclusterDefaultVpc72558F16": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "EksClusterProduct/sc-eks-cluster/DefaultVpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/Resource"
      }
    },
    "sceksclusterDefaultVpcPublicSubnet1Subnet2BF2B818": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/19",
        "VpcId": {
          "Ref": "sceksclusterDefaultVpc72558F16"
        },
        "AvailabilityZone": "dummy1a",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet1/Subnet"
      }
    },
    "sceksclusterDefaultVpcPublicSubnet1RouteTable4548BA41": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "sceksclusterDefaultVpc72558F16"
        },
        "Tags": [
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet1/RouteTable"
      }
    },
    "sceksclusterDefaultVpcPublicSubnet1RouteTableAssociationF1B1594E": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "sceksclusterDefaultVpcPublicSubnet1RouteTable4548BA41"
        },
        "SubnetId": {
          "Ref": "sceksclusterDefaultVpcPublicSubnet1Subnet2BF2B818"
        }
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet1/RouteTableAssociation"
      }
    },
    "sceksclusterDefaultVpcPublicSubnet1DefaultRoute4C17565F": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "sceksclusterDefaultVpcPublicSubnet1RouteTable4548BA41"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "sceksclusterDefaultVpcIGW996241E5"
        }
      },
      "DependsOn": [
        "sceksclusterDefaultVpcVPCGW4FA689CD"
      ],
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet1/DefaultRoute"
      }
    },
    "sceksclusterDefaultVpcPublicSubnet1EIPE133E325": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet1/EIP"
      }
    },
    "sceksclusterDefaultVpcPublicSubnet1NATGatewayC2900007": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "sceksclusterDefaultVpcPublicSubnet1EIPE133E325",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "sceksclusterDefaultVpcPublicSubnet1Subnet2BF2B818"
        },
        "Tags": [
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet1/NATGateway"
      }
    },
    "sceksclusterDefaultVpcPublicSubnet2SubnetFD5B76D9": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.32.0/19",
        "VpcId": {
          "Ref": "sceksclusterDefaultVpc72558F16"
        },
        "AvailabilityZone": "dummy1b",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet2/Subnet"
      }
    },
    "sceksclusterDefaultVpcPublicSubnet2RouteTable6F111334": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "sceksclusterDefaultVpc72558F16"
        },
        "Tags": [
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet2/RouteTable"
      }
    },
    "sceksclusterDefaultVpcPublicSubnet2RouteTableAssociation40B01DFA": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "sceksclusterDefaultVpcPublicSubnet2RouteTable6F111334"
        },
        "SubnetId": {
          "Ref": "sceksclusterDefaultVpcPublicSubnet2SubnetFD5B76D9"
        }
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet2/RouteTableAssociation"
      }
    },
    "sceksclusterDefaultVpcPublicSubnet2DefaultRouteA88947EC": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "sceksclusterDefaultVpcPublicSubnet2RouteTable6F111334"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "sceksclusterDefaultVpcIGW996241E5"
        }
      },
      "DependsOn": [
        "sceksclusterDefaultVpcVPCGW4FA689CD"
      ],
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet2/DefaultRoute"
      }
    },
    "sceksclusterDefaultVpcPublicSubnet2EIP5EDD5F97": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet2/EIP"
      }
    },
    "sceksclusterDefaultVpcPublicSubnet2NATGatewayA0A6CE1E": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "sceksclusterDefaultVpcPublicSubnet2EIP5EDD5F97",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "sceksclusterDefaultVpcPublicSubnet2SubnetFD5B76D9"
        },
        "Tags": [
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet2/NATGateway"
      }
    },
    "sceksclusterDefaultVpcPublicSubnet3SubnetBED477C8": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.64.0/19",
        "VpcId": {
          "Ref": "sceksclusterDefaultVpc72558F16"
        },
        "AvailabilityZone": "dummy1c",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet3/Subnet"
      }
    },
    "sceksclusterDefaultVpcPublicSubnet3RouteTable670E095E": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "sceksclusterDefaultVpc72558F16"
        },
        "Tags": [
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet3/RouteTable"
      }
    },
    "sceksclusterDefaultVpcPublicSubnet3RouteTableAssociation80A98D1C": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "sceksclusterDefaultVpcPublicSubnet3RouteTable670E095E"
        },
        "SubnetId": {
          "Ref": "sceksclusterDefaultVpcPublicSubnet3SubnetBED477C8"
        }
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet3/RouteTableAssociation"
      }
    },
    "sceksclusterDefaultVpcPublicSubnet3DefaultRoute6FE205C7": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "sceksclusterDefaultVpcPublicSubnet3RouteTable670E095E"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "sceksclusterDefaultVpcIGW996241E5"
        }
      },
      "DependsOn": [
        "sceksclusterDefaultVpcVPCGW4FA689CD"
      ],
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet3/DefaultRoute"
      }
    },
    "sceksclusterDefaultVpcPublicSubnet3EIP2E749E97": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet3/EIP"
      }
    },
    "sceksclusterDefaultVpcPublicSubnet3NATGateway78084939": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "sceksclusterDefaultVpcPublicSubnet3EIP2E749E97",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "sceksclusterDefaultVpcPublicSubnet3SubnetBED477C8"
        },
        "Tags": [
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PublicSubnet3/NATGateway"
      }
    },
    "sceksclusterDefaultVpcPrivateSubnet1Subnet5358476E": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.96.0/19",
        "VpcId": {
          "Ref": "sceksclusterDefaultVpc72558F16"
        },
        "AvailabilityZone": "dummy1a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "kubernetes.io/role/internal-elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PrivateSubnet1/Subnet"
      }
    },
    "sceksclusterDefaultVpcPrivateSubnet1RouteTableF0AFB06E": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "sceksclusterDefaultVpc72558F16"
        },
        "Tags": [
          {
            "Key": "kubernetes.io/role/internal-elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PrivateSubnet1/RouteTable"
      }
    },
    "sceksclusterDefaultVpcPrivateSubnet1RouteTableAssociation138EA165": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "sceksclusterDefaultVpcPrivateSubnet1RouteTableF0AFB06E"
        },
        "SubnetId": {
          "Ref": "sceksclusterDefaultVpcPrivateSubnet1Subnet5358476E"
        }
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PrivateSubnet1/RouteTableAssociation"
      }
    },
    "sceksclusterDefaultVpcPrivateSubnet1DefaultRoute143776B4": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "sceksclusterDefaultVpcPrivateSubnet1RouteTableF0AFB06E"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "sceksclusterDefaultVpcPublicSubnet1NATGatewayC2900007"
        }
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PrivateSubnet1/DefaultRoute"
      }
    },
    "sceksclusterDefaultVpcPrivateSubnet2SubnetE369A258": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.128.0/19",
        "VpcId": {
          "Ref": "sceksclusterDefaultVpc72558F16"
        },
        "AvailabilityZone": "dummy1b",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "kubernetes.io/role/internal-elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PrivateSubnet2/Subnet"
      }
    },
    "sceksclusterDefaultVpcPrivateSubnet2RouteTable9FB22174": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "sceksclusterDefaultVpc72558F16"
        },
        "Tags": [
          {
            "Key": "kubernetes.io/role/internal-elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PrivateSubnet2/RouteTable"
      }
    },
    "sceksclusterDefaultVpcPrivateSubnet2RouteTableAssociation13CD250D": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "sceksclusterDefaultVpcPrivateSubnet2RouteTable9FB22174"
        },
        "SubnetId": {
          "Ref": "sceksclusterDefaultVpcPrivateSubnet2SubnetE369A258"
        }
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PrivateSubnet2/RouteTableAssociation"
      }
    },
    "sceksclusterDefaultVpcPrivateSubnet2DefaultRoute24406E4D": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "sceksclusterDefaultVpcPrivateSubnet2RouteTable9FB22174"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "sceksclusterDefaultVpcPublicSubnet2NATGatewayA0A6CE1E"
        }
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PrivateSubnet2/DefaultRoute"
      }
    },
    "sceksclusterDefaultVpcPrivateSubnet3SubnetB13CB5F2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.160.0/19",
        "VpcId": {
          "Ref": "sceksclusterDefaultVpc72558F16"
        },
        "AvailabilityZone": "dummy1c",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "kubernetes.io/role/internal-elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PrivateSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PrivateSubnet3/Subnet"
      }
    },
    "sceksclusterDefaultVpcPrivateSubnet3RouteTable64CF2F16": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "sceksclusterDefaultVpc72558F16"
        },
        "Tags": [
          {
            "Key": "kubernetes.io/role/internal-elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PrivateSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PrivateSubnet3/RouteTable"
      }
    },
    "sceksclusterDefaultVpcPrivateSubnet3RouteTableAssociation272BCDC8": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "sceksclusterDefaultVpcPrivateSubnet3RouteTable64CF2F16"
        },
        "SubnetId": {
          "Ref": "sceksclusterDefaultVpcPrivateSubnet3SubnetB13CB5F2"
        }
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PrivateSubnet3/RouteTableAssociation"
      }
    },
    "sceksclusterDefaultVpcPrivateSubnet3DefaultRoute57D0835A": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "sceksclusterDefaultVpcPrivateSubnet3RouteTable64CF2F16"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "sceksclusterDefaultVpcPublicSubnet3NATGateway78084939"
        }
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/PrivateSubnet3/DefaultRoute"
      }
    },
    "sceksclusterDefaultVpcIGW996241E5": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "EksClusterProduct/sc-eks-cluster/DefaultVpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/IGW"
      }
    },
    "sceksclusterDefaultVpcVPCGW4FA689CD": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "sceksclusterDefaultVpc72558F16"
        },
        "InternetGatewayId": {
          "Ref": "sceksclusterDefaultVpcIGW996241E5"
        }
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/DefaultVpc/VPCGW"
      }
    },
    "sceksclusterRole5AB80F2E": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "eks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/AmazonEKSClusterPolicy"
              ]
            ]
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/Role/Resource"
      }
    },
    "sceksclusterControlPlaneSecurityGroup5D79ED99": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "EKS Control Plane Security Group",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "sceksclusterDefaultVpc72558F16"
        }
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/ControlPlaneSecurityGroup/Resource"
      }
    },
    "sceksclusterControlPlaneSecurityGroupfromEksClusterProductsceksclusterKubectlProviderSecurityGroupD5D1AD3B4436729CF31": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "Description": "from EksClusterProductsceksclusterKubectlProviderSecurityGroupD5D1AD3B:443",
        "FromPort": 443,
        "GroupId": {
          "Fn::GetAtt": [
            "sceksclusterControlPlaneSecurityGroup5D79ED99",
            "GroupId"
          ]
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "sceksclusterKubectlProviderSecurityGroupB877DAC0",
            "GroupId"
          ]
        },
        "ToPort": 443
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/ControlPlaneSecurityGroup/from EksClusterProductsceksclusterKubectlProviderSecurityGroupD5D1AD3B:443"
      }
    },
    "sceksclusterKubectlProviderSecurityGroupB877DAC0": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Comminication between KubectlProvider and EKS Control Plane",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "sceksclusterDefaultVpc72558F16"
        }
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/KubectlProviderSecurityGroup/Resource"
      }
    },
    "sceksclusterCreationRole5057AB1D": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":iam::865200059792:root"
                    ]
                  ]
                }
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "DependsOn": [
        "sceksclusterDefaultVpcIGW996241E5",
        "sceksclusterDefaultVpcPrivateSubnet1DefaultRoute143776B4",
        "sceksclusterDefaultVpcPrivateSubnet1RouteTableF0AFB06E",
        "sceksclusterDefaultVpcPrivateSubnet1RouteTableAssociation138EA165",
        "sceksclusterDefaultVpcPrivateSubnet1Subnet5358476E",
        "sceksclusterDefaultVpcPrivateSubnet2DefaultRoute24406E4D",
        "sceksclusterDefaultVpcPrivateSubnet2RouteTable9FB22174",
        "sceksclusterDefaultVpcPrivateSubnet2RouteTableAssociation13CD250D",
        "sceksclusterDefaultVpcPrivateSubnet2SubnetE369A258",
        "sceksclusterDefaultVpcPrivateSubnet3DefaultRoute57D0835A",
        "sceksclusterDefaultVpcPrivateSubnet3RouteTable64CF2F16",
        "sceksclusterDefaultVpcPrivateSubnet3RouteTableAssociation272BCDC8",
        "sceksclusterDefaultVpcPrivateSubnet3SubnetB13CB5F2",
        "sceksclusterDefaultVpcPublicSubnet1DefaultRoute4C17565F",
        "sceksclusterDefaultVpcPublicSubnet1EIPE133E325",
        "sceksclusterDefaultVpcPublicSubnet1NATGatewayC2900007",
        "sceksclusterDefaultVpcPublicSubnet1RouteTable4548BA41",
        "sceksclusterDefaultVpcPublicSubnet1RouteTableAssociationF1B1594E",
        "sceksclusterDefaultVpcPublicSubnet1Subnet2BF2B818",
        "sceksclusterDefaultVpcPublicSubnet2DefaultRouteA88947EC",
        "sceksclusterDefaultVpcPublicSubnet2EIP5EDD5F97",
        "sceksclusterDefaultVpcPublicSubnet2NATGatewayA0A6CE1E",
        "sceksclusterDefaultVpcPublicSubnet2RouteTable6F111334",
        "sceksclusterDefaultVpcPublicSubnet2RouteTableAssociation40B01DFA",
        "sceksclusterDefaultVpcPublicSubnet2SubnetFD5B76D9",
        "sceksclusterDefaultVpcPublicSubnet3DefaultRoute6FE205C7",
        "sceksclusterDefaultVpcPublicSubnet3EIP2E749E97",
        "sceksclusterDefaultVpcPublicSubnet3NATGateway78084939",
        "sceksclusterDefaultVpcPublicSubnet3RouteTable670E095E",
        "sceksclusterDefaultVpcPublicSubnet3RouteTableAssociation80A98D1C",
        "sceksclusterDefaultVpcPublicSubnet3SubnetBED477C8",
        "sceksclusterDefaultVpc72558F16",
        "sceksclusterDefaultVpcVPCGW4FA689CD",
        "sceksclusterKubectlProviderSecurityGroupB877DAC0"
      ],
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/Resource/CreationRole/Resource"
      }
    },
    "sceksclusterCreationRoleDefaultPolicyC7A0B3B2": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "iam:PassRole",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "sceksclusterRole5AB80F2E",
                  "Arn"
                ]
              }
            },
            {
              "Action": [
                "ec2:DescribeSubnets",
                "ec2:DescribeRouteTables"
              ],
              "Effect": "Allow",
              "Resource": "*"
            },
            {
              "Action": [
                "eks:CreateCluster",
                "eks:DescribeCluster",
                "eks:DescribeUpdate",
                "eks:DeleteCluster",
                "eks:UpdateClusterVersion",
                "eks:UpdateClusterConfig",
                "eks:CreateFargateProfile",
                "eks:TagResource",
                "eks:UntagResource"
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":eks:eu-west-1:865200059792:cluster/[object Object]"
                    ]
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":eks:eu-west-1:865200059792:cluster/[object Object]/*"
                    ]
                  ]
                }
              ]
            },
            {
              "Action": [
                "eks:DescribeFargateProfile",
                "eks:DeleteFargateProfile"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition"
                    },
                    ":eks:eu-west-1:865200059792:fargateprofile/[object Object]/*"
                  ]
                ]
              }
            },
            {
              "Action": [
                "iam:GetRole",
                "iam:listAttachedRolePolicies"
              ],
              "Effect": "Allow",
              "Resource": "*"
            },
            {
              "Action": "iam:CreateServiceLinkedRole",
              "Effect": "Allow",
              "Resource": "*"
            },
            {
              "Action": "ec2:DescribeVpcs",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition"
                    },
                    ":ec2:eu-west-1:865200059792:vpc/",
                    {
                      "Ref": "sceksclusterDefaultVpc72558F16"
                    }
                  ]
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "sceksclusterCreationRoleDefaultPolicyC7A0B3B2",
        "Roles": [
          {
            "Ref": "sceksclusterCreationRole5057AB1D"
          }
        ]
      },
      "DependsOn": [
        "sceksclusterDefaultVpcIGW996241E5",
        "sceksclusterDefaultVpcPrivateSubnet1DefaultRoute143776B4",
        "sceksclusterDefaultVpcPrivateSubnet1RouteTableF0AFB06E",
        "sceksclusterDefaultVpcPrivateSubnet1RouteTableAssociation138EA165",
        "sceksclusterDefaultVpcPrivateSubnet1Subnet5358476E",
        "sceksclusterDefaultVpcPrivateSubnet2DefaultRoute24406E4D",
        "sceksclusterDefaultVpcPrivateSubnet2RouteTable9FB22174",
        "sceksclusterDefaultVpcPrivateSubnet2RouteTableAssociation13CD250D",
        "sceksclusterDefaultVpcPrivateSubnet2SubnetE369A258",
        "sceksclusterDefaultVpcPrivateSubnet3DefaultRoute57D0835A",
        "sceksclusterDefaultVpcPrivateSubnet3RouteTable64CF2F16",
        "sceksclusterDefaultVpcPrivateSubnet3RouteTableAssociation272BCDC8",
        "sceksclusterDefaultVpcPrivateSubnet3SubnetB13CB5F2",
        "sceksclusterDefaultVpcPublicSubnet1DefaultRoute4C17565F",
        "sceksclusterDefaultVpcPublicSubnet1EIPE133E325",
        "sceksclusterDefaultVpcPublicSubnet1NATGatewayC2900007",
        "sceksclusterDefaultVpcPublicSubnet1RouteTable4548BA41",
        "sceksclusterDefaultVpcPublicSubnet1RouteTableAssociationF1B1594E",
        "sceksclusterDefaultVpcPublicSubnet1Subnet2BF2B818",
        "sceksclusterDefaultVpcPublicSubnet2DefaultRouteA88947EC",
        "sceksclusterDefaultVpcPublicSubnet2EIP5EDD5F97",
        "sceksclusterDefaultVpcPublicSubnet2NATGatewayA0A6CE1E",
        "sceksclusterDefaultVpcPublicSubnet2RouteTable6F111334",
        "sceksclusterDefaultVpcPublicSubnet2RouteTableAssociation40B01DFA",
        "sceksclusterDefaultVpcPublicSubnet2SubnetFD5B76D9",
        "sceksclusterDefaultVpcPublicSubnet3DefaultRoute6FE205C7",
        "sceksclusterDefaultVpcPublicSubnet3EIP2E749E97",
        "sceksclusterDefaultVpcPublicSubnet3NATGateway78084939",
        "sceksclusterDefaultVpcPublicSubnet3RouteTable670E095E",
        "sceksclusterDefaultVpcPublicSubnet3RouteTableAssociation80A98D1C",
        "sceksclusterDefaultVpcPublicSubnet3SubnetBED477C8",
        "sceksclusterDefaultVpc72558F16",
        "sceksclusterDefaultVpcVPCGW4FA689CD",
        "sceksclusterKubectlProviderSecurityGroupB877DAC0"
      ],
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/Resource/CreationRole/DefaultPolicy/Resource"
      }
    },
    "sceksclusterE0BB4257": {
      "Type": "Custom::AWSCDK-EKS-Cluster",
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454",
            "Outputs.EksClusterProductawscdkawseksClusterResourceProviderframeworkonEventB7B3320EArn"
          ]
        },
        "Config": {
          "name": {
            "Ref": "EksClusterName"
          },
          "version": "1.17",
          "roleArn": {
            "Fn::GetAtt": [
              "sceksclusterRole5AB80F2E",
              "Arn"
            ]
          },
          "resourcesVpcConfig": {
            "subnetIds": [
              {
                "Ref": "sceksclusterDefaultVpcPublicSubnet1Subnet2BF2B818"
              },
              {
                "Ref": "sceksclusterDefaultVpcPublicSubnet2SubnetFD5B76D9"
              },
              {
                "Ref": "sceksclusterDefaultVpcPublicSubnet3SubnetBED477C8"
              },
              {
                "Ref": "sceksclusterDefaultVpcPrivateSubnet1Subnet5358476E"
              },
              {
                "Ref": "sceksclusterDefaultVpcPrivateSubnet2SubnetE369A258"
              },
              {
                "Ref": "sceksclusterDefaultVpcPrivateSubnet3SubnetB13CB5F2"
              }
            ],
            "securityGroupIds": [
              {
                "Fn::GetAtt": [
                  "sceksclusterControlPlaneSecurityGroup5D79ED99",
                  "GroupId"
                ]
              }
            ],
            "endpointPublicAccess": true,
            "endpointPrivateAccess": true
          }
        },
        "AssumeRoleArn": {
          "Fn::GetAtt": [
            "sceksclusterCreationRole5057AB1D",
            "Arn"
          ]
        },
        "AttributesRevision": 2
      },
      "DependsOn": [
        "sceksclusterDefaultVpcIGW996241E5",
        "sceksclusterDefaultVpcPrivateSubnet1DefaultRoute143776B4",
        "sceksclusterDefaultVpcPrivateSubnet1RouteTableF0AFB06E",
        "sceksclusterDefaultVpcPrivateSubnet1RouteTableAssociation138EA165",
        "sceksclusterDefaultVpcPrivateSubnet1Subnet5358476E",
        "sceksclusterDefaultVpcPrivateSubnet2DefaultRoute24406E4D",
        "sceksclusterDefaultVpcPrivateSubnet2RouteTable9FB22174",
        "sceksclusterDefaultVpcPrivateSubnet2RouteTableAssociation13CD250D",
        "sceksclusterDefaultVpcPrivateSubnet2SubnetE369A258",
        "sceksclusterDefaultVpcPrivateSubnet3DefaultRoute57D0835A",
        "sceksclusterDefaultVpcPrivateSubnet3RouteTable64CF2F16",
        "sceksclusterDefaultVpcPrivateSubnet3RouteTableAssociation272BCDC8",
        "sceksclusterDefaultVpcPrivateSubnet3SubnetB13CB5F2",
        "sceksclusterDefaultVpcPublicSubnet1DefaultRoute4C17565F",
        "sceksclusterDefaultVpcPublicSubnet1EIPE133E325",
        "sceksclusterDefaultVpcPublicSubnet1NATGatewayC2900007",
        "sceksclusterDefaultVpcPublicSubnet1RouteTable4548BA41",
        "sceksclusterDefaultVpcPublicSubnet1RouteTableAssociationF1B1594E",
        "sceksclusterDefaultVpcPublicSubnet1Subnet2BF2B818",
        "sceksclusterDefaultVpcPublicSubnet2DefaultRouteA88947EC",
        "sceksclusterDefaultVpcPublicSubnet2EIP5EDD5F97",
        "sceksclusterDefaultVpcPublicSubnet2NATGatewayA0A6CE1E",
        "sceksclusterDefaultVpcPublicSubnet2RouteTable6F111334",
        "sceksclusterDefaultVpcPublicSubnet2RouteTableAssociation40B01DFA",
        "sceksclusterDefaultVpcPublicSubnet2SubnetFD5B76D9",
        "sceksclusterDefaultVpcPublicSubnet3DefaultRoute6FE205C7",
        "sceksclusterDefaultVpcPublicSubnet3EIP2E749E97",
        "sceksclusterDefaultVpcPublicSubnet3NATGateway78084939",
        "sceksclusterDefaultVpcPublicSubnet3RouteTable670E095E",
        "sceksclusterDefaultVpcPublicSubnet3RouteTableAssociation80A98D1C",
        "sceksclusterDefaultVpcPublicSubnet3SubnetBED477C8",
        "sceksclusterDefaultVpc72558F16",
        "sceksclusterDefaultVpcVPCGW4FA689CD",
        "sceksclusterKubectlProviderSecurityGroupB877DAC0",
        "sceksclusterCreationRoleDefaultPolicyC7A0B3B2",
        "sceksclusterCreationRole5057AB1D"
      ],
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete",
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/Resource/Resource/Default"
      }
    },
    "sceksclusterKubectlReadyBarrier1FE87038": {
      "Type": "AWS::SSM::Parameter",
      "Properties": {
        "Type": "String",
        "Value": "aws:cdk:eks:kubectl-ready"
      },
      "DependsOn": [
        "sceksclusterCreationRoleDefaultPolicyC7A0B3B2",
        "sceksclusterCreationRole5057AB1D",
        "sceksclusterE0BB4257"
      ],
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/KubectlReadyBarrier"
      }
    },
    "sceksclusterAwsAuthmanifest172B175E": {
      "Type": "Custom::AWSCDK-EKS-KubernetesResource",
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "awscdkawseksKubectlProviderNestedStackawscdkawseksKubectlProviderNestedStackResourceA7AEBA6B",
            "Outputs.EksClusterProductawscdkawseksKubectlProviderframeworkonEventD02EFEC8Arn"
          ]
        },
        "Manifest": {
          "Fn::Join": [
            "",
            [
              "[{\"apiVersion\":\"v1\",\"kind\":\"ConfigMap\",\"metadata\":{\"name\":\"aws-auth\",\"namespace\":\"kube-system\"},\"data\":{\"mapRoles\":\"[{\\\"rolearn\\\":\\\"",
              {
                "Fn::GetAtt": [
                  "AdminRole38563C57",
                  "Arn"
                ]
              },
              "\\\",\\\"username\\\":\\\"",
              {
                "Fn::GetAtt": [
                  "AdminRole38563C57",
                  "Arn"
                ]
              },
              "\\\",\\\"groups\\\":[\\\"system:masters\\\"]},{\\\"rolearn\\\":\\\"",
              {
                "Fn::GetAtt": [
                  "for1stregionDC87AA9A",
                  "Arn"
                ]
              },
              "\\\",\\\"username\\\":\\\"",
              {
                "Fn::GetAtt": [
                  "for1stregionDC87AA9A",
                  "Arn"
                ]
              },
              "\\\",\\\"groups\\\":[\\\"system:masters\\\"]}]\",\"mapUsers\":\"[]\",\"mapAccounts\":\"[]\"}}]"
            ]
          ]
        },
        "ClusterName": {
          "Ref": "sceksclusterE0BB4257"
        },
        "RoleArn": {
          "Fn::GetAtt": [
            "sceksclusterCreationRole5057AB1D",
            "Arn"
          ]
        }
      },
      "DependsOn": [
        "sceksclusterKubectlReadyBarrier1FE87038"
      ],
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete",
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/sc-eks-cluster/AwsAuth/manifest/Resource/Default"
      }
    },
    "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454": {
      "Type": "AWS::CloudFormation::Stack",
      "Properties": {
        "TemplateURL": {
          "Fn::Join": [
            "",
            [
              "https://s3.eu-west-1.",
              {
                "Ref": "AWS::URLSuffix"
              },
              "/",
              {
                "Ref": "AssetParametersf238259866621bc7bff26bcb8d342d73cc9fee54f7a299e97802777fbdbba45dS3BucketFE42C6EB"
              },
              "/",
              {
                "Fn::Select": [
                  0,
                  {
                    "Fn::Split": [
                      "||",
                      {
                        "Ref": "AssetParametersf238259866621bc7bff26bcb8d342d73cc9fee54f7a299e97802777fbdbba45dS3VersionKeyF23EA391"
                      }
                    ]
                  }
                ]
              },
              {
                "Fn::Select": [
                  1,
                  {
                    "Fn::Split": [
                      "||",
                      {
                        "Ref": "AssetParametersf238259866621bc7bff26bcb8d342d73cc9fee54f7a299e97802777fbdbba45dS3VersionKeyF23EA391"
                      }
                    ]
                  }
                ]
              }
            ]
          ]
        },
        "Parameters": {
          "referencetoEksClusterProductsceksclusterCreationRoleB9E2B7A4Arn": {
            "Fn::GetAtt": [
              "sceksclusterCreationRole5057AB1D",
              "Arn"
            ]
          },
          "referencetoEksClusterProductAssetParameters1d4bc9c94ad495269c8403552eb916f466fcc202a35957cfb7cf6a0fe0739d42S3BucketC6AFF934Ref": {
            "Ref": "AssetParameters1d4bc9c94ad495269c8403552eb916f466fcc202a35957cfb7cf6a0fe0739d42S3Bucket9EBF7C44"
          },
          "referencetoEksClusterProductAssetParameters1d4bc9c94ad495269c8403552eb916f466fcc202a35957cfb7cf6a0fe0739d42S3VersionKey4A1E55CARef": {
            "Ref": "AssetParameters1d4bc9c94ad495269c8403552eb916f466fcc202a35957cfb7cf6a0fe0739d42S3VersionKey752BCCC4"
          },
          "referencetoEksClusterProductAssetParameters7b8f901e53744758131669f2606b340cd2b32759fbbfc3dd93fb3fa4d08d690aS3Bucket80CBC8B8Ref": {
            "Ref": "AssetParameters7b8f901e53744758131669f2606b340cd2b32759fbbfc3dd93fb3fa4d08d690aS3Bucket24A39C33"
          },
          "referencetoEksClusterProductAssetParameters7b8f901e53744758131669f2606b340cd2b32759fbbfc3dd93fb3fa4d08d690aS3VersionKeyDD6BE2BARef": {
            "Ref": "AssetParameters7b8f901e53744758131669f2606b340cd2b32759fbbfc3dd93fb3fa4d08d690aS3VersionKey0E38F1A8"
          }
        }
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/@aws-cdk--aws-eks.ClusterResourceProvider.NestedStack/@aws-cdk--aws-eks.ClusterResourceProvider.NestedStackResource"
      }
    },
    "awscdkawseksKubectlProviderNestedStackawscdkawseksKubectlProviderNestedStackResourceA7AEBA6B": {
      "Type": "AWS::CloudFormation::Stack",
      "Properties": {
        "TemplateURL": {
          "Fn::Join": [
            "",
            [
              "https://s3.eu-west-1.",
              {
                "Ref": "AWS::URLSuffix"
              },
              "/",
              {
                "Ref": "AssetParameters11c96f59158a1674f78117dbd7b942085a4018d778a6598f6c11da4478c35edbS3BucketCC4031B9"
              },
              "/",
              {
                "Fn::Select": [
                  0,
                  {
                    "Fn::Split": [
                      "||",
                      {
                        "Ref": "AssetParameters11c96f59158a1674f78117dbd7b942085a4018d778a6598f6c11da4478c35edbS3VersionKey607E4B05"
                      }
                    ]
                  }
                ]
              },
              {
                "Fn::Select": [
                  1,
                  {
                    "Fn::Split": [
                      "||",
                      {
                        "Ref": "AssetParameters11c96f59158a1674f78117dbd7b942085a4018d778a6598f6c11da4478c35edbS3VersionKey607E4B05"
                      }
                    ]
                  }
                ]
              }
            ]
          ]
        },
        "Parameters": {
          "referencetoEksClusterProductscekscluster855B7D6FArn": {
            "Fn::GetAtt": [
              "sceksclusterE0BB4257",
              "Arn"
            ]
          },
          "referencetoEksClusterProductsceksclusterCreationRoleB9E2B7A4Arn": {
            "Fn::GetAtt": [
              "sceksclusterCreationRole5057AB1D",
              "Arn"
            ]
          },
          "referencetoEksClusterProductAssetParametersb7d8a9750f8bfded8ac76be100e3bee1c3d4824df006766110d023f42952f5c2S3Bucket7A6CD217Ref": {
            "Ref": "AssetParametersb7d8a9750f8bfded8ac76be100e3bee1c3d4824df006766110d023f42952f5c2S3Bucket9ABBD5A2"
          },
          "referencetoEksClusterProductAssetParametersb7d8a9750f8bfded8ac76be100e3bee1c3d4824df006766110d023f42952f5c2S3VersionKey1FBC12E5Ref": {
            "Ref": "AssetParametersb7d8a9750f8bfded8ac76be100e3bee1c3d4824df006766110d023f42952f5c2S3VersionKey40FF2C4A"
          },
          "referencetoEksClusterProductAssetParameters7b8f901e53744758131669f2606b340cd2b32759fbbfc3dd93fb3fa4d08d690aS3Bucket80CBC8B8Ref": {
            "Ref": "AssetParameters7b8f901e53744758131669f2606b340cd2b32759fbbfc3dd93fb3fa4d08d690aS3Bucket24A39C33"
          },
          "referencetoEksClusterProductAssetParameters7b8f901e53744758131669f2606b340cd2b32759fbbfc3dd93fb3fa4d08d690aS3VersionKeyDD6BE2BARef": {
            "Ref": "AssetParameters7b8f901e53744758131669f2606b340cd2b32759fbbfc3dd93fb3fa4d08d690aS3VersionKey0E38F1A8"
          }
        }
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/@aws-cdk--aws-eks.KubectlProvider.NestedStack/@aws-cdk--aws-eks.KubectlProvider.NestedStackResource"
      }
    },
    "for1stregionDC87AA9A": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":iam::865200059792:root"
                    ]
                  ]
                }
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "EksClusterProduct/for-1st-region/Resource"
      }
    }
  },
  "Outputs": {
    "sceksclusterConfigCommandE4AB4DC0": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "aws eks update-kubeconfig --name ",
            {
              "Ref": "sceksclusterE0BB4257"
            },
            " --region eu-west-1 --role-arn ",
            {
              "Fn::GetAtt": [
                "AdminRole38563C57",
                "Arn"
              ]
            }
          ]
        ]
      }
    },
    "sceksclusterGetTokenCommandB49A78B9": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "aws eks get-token --cluster-name ",
            {
              "Ref": "sceksclusterE0BB4257"
            },
            " --region eu-west-1 --role-arn ",
            {
              "Fn::GetAtt": [
                "AdminRole38563C57",
                "Arn"
              ]
            }
          ]
        ]
      }
    }
  }
}
